--- a/zendesk.html
+++ b/zendesk.html
@@ -32,7 +32,7 @@
 </script>
 
 <script type="text/javascript">
-  RED.nodes.registerType('zendesk', {
+  RED.nodes.registerType('zendesk-read', {
     category: 'storage',
     color: '#87A980',
     defaults: {
@@ -42,20 +42,50 @@
     outputs: 1,
     icon: "file.png",
     label: function () {
-      return "zendesk";
+      return "zendesk read";
     }
   });
 </script>
 
-<script type="text/x-red" data-template-name="zendesk">
+<script type="text/x-red" data-template-name="zendesk-read">
   <div class="form-row">
     <label for="node-input-zendeskConfig"><i class="fa fa-database"></i> Keyspace</label>
     <input type="text" id="node-input-zendeskConfig">
   </div>
 </script>
 
-<script type="text/x-red" data-help-name="zendesk">
-  <p>ZenDesk node.</p>
+<script type="text/x-red" data-help-name="zendesk-read">
+  <p>Read from ZenDesk node.</p>
+  <p>
+    Reads a ticket with ID taken from msg.ticketId.
+  </p>
+</script>
+
+<script type="text/javascript">
+  RED.nodes.registerType('zendesk-write', {
+    category: 'storage',
+    color: '#87A980',
+    defaults: {
+      zendeskConfig: {type:"ZendeskConfig",required:true}
+    },
+    inputs: 1,
+    outputs: 1,
+    icon: "file.png",
+    label: function () {
+      return "zendesk write";
+    }
+  });
+</script>
+
+<script type="text/x-red" data-template-name="zendesk-write">
+  <div class="form-row">
+    <label for="node-input-zendeskConfig"><i class="fa fa-database"></i> Keyspace</label>
+    <input type="text" id="node-input-zendeskConfig">
+  </div>
+</script>
+
+<script type="text/x-red" data-help-name="zendesk-write">
+  <p>Write to ZenDesk node.</p>
   <p>
     Creates a new ticket or updates an existing ticket with ID taken from
     msg.ticketId.
@@ -64,5 +94,35 @@
     Fields:
     subject (string), comment ({ body (string) }), type (string), custom_fields
     ([ { id (integer), value (string) } ]).
+  </p>
+</script>
+
+<script type="text/javascript">
+  RED.nodes.registerType('zendesk-read-comments', {
+    category: 'storage',
+    color: '#87A980',
+    defaults: {
+      zendeskConfig: {type:"ZendeskConfig",required:true}
+    },
+    inputs: 1,
+    outputs: 1,
+    icon: "file.png",
+    label: function () {
+      return "zendesk read comments";
+    }
+  });
+</script>
+
+<script type="text/x-red" data-template-name="zendesk-read-comments">
+  <div class="form-row">
+    <label for="node-input-zendeskConfig"><i class="fa fa-database"></i> Keyspace</label>
+    <input type="text" id="node-input-zendeskConfig">
+  </div>
+</script>
+
+<script type="text/x-red" data-help-name="zendesk-read-comments">
+  <p>Read comments from ZenDesk node.</p>
+  <p>
+    Reads comments of a ticket with ID taken from msg.ticketId.
   </p>
 </script>
